<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="64dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txtTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/black"
        android:text="@string/scan_barcode"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/buttonLeaderBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/leaderboard"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnScanBarcode"
        app:layout_constraintStart_toStartOf="@+id/btnScanBarcode"
        app:layout_constraintTop_toBottomOf="@+id/btnScanBarcode" />

</androidx.constraintlayout.widget.ConstraintLayout>